# needrename

./: .clang-format  .clang-format-ignore  .gitattributes  .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  CODE_STYLE.md  CONTRIBUTING.md  README.md  README_CN.md  setup_python_env.bat
editor/: CMakeLists.txt  main.cpp
editor/Editor/: MainClass.cpp  MainClass.h
editor/Editor/Functional/: SceneCamera.cpp  SceneCamera.h
editor/Editor/Render/: EditorRenderGraphBuilder.cpp  EditorRenderGraphBuilder.h
editor/Editor/Widget/: GameWidget.cpp  GameWidget.h  HierarchyWidget.cpp  HierarchyWidget.h  InspectorWidget.cpp  InspectorWidget.h  ProjectWidget.cpp  ProjectWidget.h  SceneWidget.cpp  SceneWidget.h  Widget.cpp  Widget.h
editor/Editor/Window/: MainWindow.cpp  MainWindow.h
engine/: .gitignore  CEventHandler.cpp  CEventHandler.h  CMainClass.cpp  CMainClass.h  CMainClassSingle.cpp  CMainClassSingle.h  CMakeLists.txt  CSDLLogger.cpp  CSDLLogger.h  CSDLWindow.cpp  CSDLWindow.h  GlobalSystem.cpp  GlobalSystem.h  MainClass.cpp  MainClass.h  cmake_config.h.in  consts.h
engine/Asset/: Asset.cpp  Asset.h  AssetRef.cpp  AssetRef.h  CMakeLists.txt  InstantiatedFromAsset.h
engine/Asset/AssetDatabase/: AssetDatabase.h  FileSystemDatabase.cpp  (+1 more)
engine/CException/: SDL_exception.h  embPyn_exception.h
engine/ClassTemplate/: Singleton.cpp  Singleton.h  TemplateCopyDisabled.cpp  TemplateCopyDisabled.h  TemplateMoveDisabled.cpp  TemplateMoveDisabled.h
engine/Core/: CMakeLists.txt  flagbits.h  guid.cpp  guid.h  guid.inl
engine/Docs/: asset_database.md  asset_management.md  coordinate_convention.md  game_framework.md  reflection_and_serialization.md  shader_interop.md
engine/Exception/: SDL_exception.h  embPyn_exception.h  exception.h  mainframe_exception.h
engine/Framework/: CMakeLists.txt
engine/Functional/: EventQueue.cpp  EventQueue.h  OptionHandler.cpp  OptionHandler.h  SDLWindow.cpp  SDLWindow.h  Time.cpp  Time.h
engine/GUI/: GUISystem.cpp  GUISystem.h
engine/Input/: GamepadInput.cpp  GamepadInput.h  Input.cpp  Input.h  KBMInput.cpp  KBMInput.h
engine/Physics/: CMakeLists.txt  PhysicsScene.cpp  PhysicsScene.h  PhysicsSystem.cpp  PhysicsSystem.h  XPBDGpuSolver.cpp  XPBDGpuSolver.h
engine/Reflection/: Archive.cpp  Archive.h  CMakeLists.txt  Field.cpp  Field.h  Method.cpp  Method.h  Method.tpp  Type.cpp  Type.h  Type.tpp  Var.cpp  Var.h  Var.tpp  enum_factory.h  macros.h  reflection.cpp  reflection.h  serialization.cpp  serialization.h  serialization.tpp  serialization_any.h  serialization_base.h  serialization_glm.cpp  serialization_glm.h  serialization_map.h  serialization_smart_pointer.h  serialization_unordered_map.h  serialization_vector.h  utils.h
engine/Render/: AttachmentUtils.h  AttachmentUtilsFunc.h  CMakeLists.txt  DebugUtils.h  FullRenderSystem.h  Hasher.hpp  ImageUtils.cpp  ImageUtils.h  ImageUtilsFunc.h  Material.cpp  Material.h  RenderSystem.cpp  RenderSystem.h  ShaderPass.cpp  ShaderPass.h  SinglePassMaterial.cpp  SinglePassMaterial.h  VkWrapper.tcc
engine/Tests/: CMakeLists.txt  camera_transform_test.cpp  delegate_test.cpp  flag_bits_test.cpp  magic_enum_test.cpp  new_rendergraph_test.cpp  renderer_thread_test.cpp  shader_compile_test.cpp  shader_refl_test.cpp  structured_buffer_test.cpp  transform_test.cpp  vertex_attribute_test.cpp
engine/UserInterface/: CMakeLists.txt  GUISystem.cpp  GUISystem.h  Input.cpp  Input.h
example/: CMakeLists.txt
example/SDL_example/: CMakeLists.txt  main.cpp
example/SDL_test/: CMakeLists.txt
example/camera_example/: CMakeLists.txt  main.cpp
example/camera_test/: CMakeLists.txt  main.cpp
example/editor_example/: CMakeLists.txt  main.cpp
example/editor_run_game_example/: CMakeLists.txt  CustomComponent.cpp  CustomComponent.h  main.cpp
example/editor_spinning_example/: main.cpp
example/engine_window_example/: CMakeLists.txt  main.cpp
example/engine_window_test/: CMakeLists.txt  main.cpp
example/external_resource_loading_example/: CMakeLists.txt  main.cpp
example/mesh_rendering_example/: main.cpp
example/mesh_rendering_test/: main.cpp
example/physics_example/: CMakeLists.txt  CameraControllerComponent.cpp  CameraControllerComponent.h  PhysicsExampleRenderGraphBuilder.cpp  PhysicsExampleRenderGraphBuilder.h  SceneBuilder.cpp  SceneBuilder.h  SimulationToggleComponent.cpp  SimulationToggleComponent.h  main.cpp
example/project_load_example/: CMakeLists.txt  main.cpp
example/project_load_test/: main.cpp
example/toon_shading/: CMakeLists.txt  main.cpp  rendering.hpp  ui.hpp
example/transform_test/: main.cpp
reflection_parser/: .gitignore  CMakeLists.txt  parser.cmake  parser_main.py  processor.py  requirements.txt
reflection_parser/reflection/: Type.py  utils.py
reflection_parser/template/: config.json.template  generated_reflection.cpp.template  generated_reflection.ipp.template  generated_reflection.tpp.template  generated_serialization.hpp.template  generated_serialization.ipp.template  reflection.hpp.template  reflection_class.ipp.template  reflection_global_function_impl.ipp.template  reflection_global_template_func.tpp.template  reflection_init.ipp.template  registrar_declare.hpp.template  registrar_impl.ipp.template  serialization_impl.ipp.template  wrapper.inc.template
test/: CMakeLists.txt  SDL_init_test.cpp  camera_transform_test.cpp  complex_mesh_test.cpp  compute_buffer_test.cpp  compute_shader_test.cpp  constant_data_test.cpp  delegate_test.cpp  external_resource_loading_test.cpp  flag_bits_test.cpp  image_read_test.cpp  imgui_test.cpp  input_test.cpp  mesh_loading_test.cpp  mrt_test.cpp  new_material_test.cpp  pbr_test.cpp  physics_registration_test.cpp  project_loading_test.cpp  reflection_registeration_test.cpp  reflection_registeration_test.h  serialization_test.cpp  serialization_test.h  shadow_map_test.cpp  skinned_mesh_test.cpp  skybox_test.cpp  transform_test.cpp  vulkan_init_test.cpp
test/reflection_test/: CMakeLists.txt  reflection_test.cpp  reflection_test.h
test/serialization_test/: CMakeLists.txt  serialization_test.cpp  serialization_test.h
(+686 files in other folders)
